--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Aucun Probleme</title>
   </head>
   <body>
-    <p>va voir le repo github</p>
+    <p>va voir le <a href="https://github.com/matbilodeau/aucun-probleme">repo</a> github</p>
   </body>
 </html>
